# src/routes/movies.ts
@@ -1,17 +1,14 @@
 import { Router, Request, Response, NextFunction } from 'express';
 import { HttpError } from '../errors/http-error';
+import { getPopularMovies, searchMovies } from '../controllers/movies';
 
 const router = Router();
 
 // GET /movies/search?q={title}&page={number}
-router.get('/search', (_request: Request, _response: Response, next: NextFunction) => {
-  next(new HttpError(501, 'Not Implemented'));
-});
+router.get('/search', searchMovies);
 
 // GET /movies/popular?page={number}
-router.get('/popular', (_request: Request, _response: Response, next: NextFunction) => {
-  next(new HttpError(501, 'Not Implemented'));
-});
+router.get('/popular', getPopularMovies);
 
 // GET /movies/:id
 router.get('/:id', (_request: Request, _response: Response, next: NextFunction) => {
